updating module dependencies, api fixes, code refactoring + adding tests
